[project]
name = "aiomoqt"
dynamic = ["version"]
description = "Python asyncio implementation of the MoQT protocol"
readme = "README.md"
requires-python = ">=3.12"
license = "MIT"
authors = [
    { name = "Giovanni Marzot", email = "gmarzot@marzresearch.net" }
]
dependencies = [
    "certifi",
    "qh3>=1.7.0",
    "sortedcontainers>=2.4.0",
]

[project.urls]
Homepage = "https://github.com/gmarzot/aiomoqt"
Repository = "https://github.com/gmarzot/aiomoqt.git"

[project.optional-dependencies]
test = [
    "pytest",
    "pytest-asyncio",
]
dev = [
    "pytest",
    "pytest-asyncio",
    "ruff",
    "ty",
]
examples = [
    "argparse",
]

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W"]
ignore = ["E501"]  # line length handled by formatter

[build-system]
requires = ["setuptools>=45", "setuptools_scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["aiomoqt*"]
exclude = ["aiomoqt.tests*"]

[tool.setuptools_scm]

